<resources>
    <string name="app_name">FHRSUK</string>

    <string name="rating_5">5</string>
    <string name="rating_4">4</string>
    <string name="rating_3">3</string>
    <string name="rating_2">2</string>
    <string name="rating_1">1</string>
    <string name="rating_0">0</string>
    <string name="rating_exempt">Exempt</string>
    <string name="rating_awaiting_publication">Awaiting Publication</string>
    <string name="rating_awaiting_inspection">Awaiting Inspection</string>
    <string name="rating_pass">Pass</string>
    <string name="not_available">N/A</string>

    <string name="hint_restaurant">restaurant or establishment…</string>
    <string name="hint_location">street or town…</string>

    <string name="button_search">Search</string>
    <string name="search_missing_text">Missing text! Please enter text into both fields</string>
    <string name="response_no_data_found">Nothing found!</string>
    <string name="response_no_connection">No internet connection!</string>
    <string name="retry">Retry</string>

    <string name="permission_rationale">Location permission necessary for nearby restaurant ratings</string>
    <string name="permission_denied_explanation">Location permission needed!</string>
    <string name="settings">Permission Settings</string>

    <string name="additional_business_type">Business Type</string>
    <string name="score_breakdown_hygiene_heading">Hygiene</string>
    <string name="score_breakdown_structural_heading">Structural</string>
    <string name="score_breakdown_management_heading">Management</string>

    <string name="score_breakdown_very_good">Very Good</string>
    <string name="score_breakdown_good">Good</string>
    <string name="score_breakdown_generally_satisfactory">Generally satisfactory</string>
    <string name="score_breakdown_improvement_necessary">Improvement necessary</string>
    <string name="score_breakdown_major_improvement_necessary">Major improvement necessary</string>
    <string name="score_breakdown_urgent_improvement_necessary">Urgent improvement necessary</string>

    <string name="card_indicator_description">Indicator icon for expanded / collapsed card item</string>

    <string name="hygiene_breakdown_info">Hygienic handling of food including preparation, cooking, re-heating, cooling and storage</string>
    <string name="structural_breakdown_info">Cleanliness and condition of facilities and building (including having appropriate layout, ventilation, hand washing facilities and pest control) to enable good food hygiene</string>
    <string name="management_breakdown_info">System or checks in place to ensure that food sold or served is safe to eat, evidence that staff know about food safety, and the food safety officer has confidence that standards will be maintained in the future</string>
    <string name="information_icon_description">Information icon</string>

    <string name="fab_up_description">FAB: Scroll to top of page</string>
    <string name="fab_filter_description">FAB: Filter results</string>
    <string name="fab_filter0_description">FAB: Filter results to 0 ratings</string>
    <string name="fab_filter1_description">FAB: Filter results to 1 ratings</string>
    <string name="fab_filter2_description">FAB: Filter results to 2 ratings</string>
    <string name="fab_filter3_description">FAB: Filter results to 3 ratings</string>
    <string name="fab_filter4_description">FAB: Filter results to 4 ratings</string>
    <string name="fab_filter5_description">FAB: Filter results to 5 ratings</string>
    <string name="fab_filter_clear_description">FAB: Clear filter</string>

    <string name="favourites_button_content_description">Favourites Button</string>

    <string name="menu_nearby">Nearby</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourites">Favourites</string>

    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="favourite_updated">Favourite updated</string>

</resources>
