<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/hygiene_breakdown_info_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score_breakdown_hygiene_heading"
        android:theme="@style/textHeading" />

    <TextView
        android:id="@+id/hygiene_breakdown_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hygiene_breakdown_info"
        android:theme="@style/textSubHeading" />

    <TextView
        android:id="@+id/structural_breakdown_info_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score_breakdown_structural_heading"
        android:theme="@style/textHeading" />

    <TextView
        android:id="@+id/structural_breakdown_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/structural_breakdown_info"
        android:theme="@style/textSubHeading" />

    <TextView
        android:id="@+id/management_breakdown_info_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score_breakdown_management_heading"
        android:theme="@style/textHeading" />

    <TextView
        android:id="@+id/management_breakdown_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/management_breakdown_info"
        android:theme="@style/textSubHeading" />

</LinearLayout>